More constent sub menu styling in app list more full width search boxes Fix checkboxes outside of frm_wrap in some modals Add Firefox workaround for dropdown select height

--- a/css/admin/applications.css
+++ b/css/admin/applications.css
@@ -209,7 +209,7 @@
 }
 
 #frm_application_category_filter > a {
-    padding: 0 10px;
+    padding: 0 8px;
 }
 
 #frm_application_category_filter > a:first-child {
@@ -218,11 +218,6 @@
 
 #frm_application_category_filter > a:last-child {
 	padding-right: 0;
-}
-
-#frm_application_category_filter > a.frm-active-application-category {
-	color: var(--grey-700);
-	pointer-events: none;
 }
 
 .frm-admin-page-applications #frm_top_bar h1 {
