--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -44,6 +44,7 @@
 	--text-lg: 18px;
 	--text-xl: 20px;
 	--leading: 1.5;
+	--gap-xs: 8px;
 	--gap-sm: 16px;
 	--gap-md: 24px;
 	--gap-lg: 32px;
@@ -619,6 +620,11 @@ ul.frm_form_nav > li {
 	margin: 0;
 }
 
+.frm_wrap .subsubsub a {
+	line-height: var(--leading);
+	font-size: var(--text-sm);
+}
+
 .frm_wrap .frm_page_container {
 	height: calc( 100vh - 32px );
 	display: flex;
@@ -1119,10 +1125,12 @@ p.frm_has_shortcodes {
 
 .frm-button-primary,
 .wp-core-ui .button-primary.frm-button-primary,
+.wp-core-ui .button.frm-button-primary,
 .frm-button-secondary,
 .wp-core-ui .button-secondary.frm-button-secondary,
 .wp-core-ui .button.frm-button-secondary,
-.wp-core-ui.frm-white-body .button,
+.frm-white-body #search-submit,
+.frm-white-body .tablenav .button,
 .frm_orange_button,
 .toplevel_page_formidable #frm_upgrade_modal .button-primary,
 .wp-core-ui.frm-white-body .button-primary,
@@ -1505,6 +1513,7 @@ a.frm_hidden,
 
 .frm-dialog .frm-sub-label,
 .frm-dialog label,
+.dropdown .frm_primary_label,
 .accordion-container label,
 .frm-fields td > label,
 .frm-fields td > div > label,
@@ -2220,11 +2229,8 @@ h2.frm-h2 + .howto {
 	width: 480px;
 }
 
-#frm_new_form_modal #template-search-input,
-#frm_new_form_modal #frm_leave_email,
-#frm_new_form_modal #frm_code_from_email
-{
-	border-radius: 4px !important;
+#frm_new_form_modal #template-search-input {
+	width: 100%;
 }
 
 #frm-email-block .frm-with-left-icon .frmsvg {
@@ -3466,6 +3472,7 @@ input[type="checkbox"] {
 .frm_wrap .with_frm_style .frm_checkbox input[type=checkbox],
 .frm_wrap .with_frm_style .frm_radio input[type=radio],
 .frm_wrap input[type=checkbox],
+.frm-white-body input[type=checkbox],
 .field-group input[type=checkbox],
 .frm_scale input[type=radio],
 .frm_radio input[type=radio],
@@ -3478,20 +3485,24 @@ input[type="checkbox"] {
 
 .frm_wrap .with_frm_style .frm_checkbox input[type=checkbox],
 .frm_wrap input[type=checkbox],
+.frm-white-body input[type=checkbox],
 .field-group input[type=checkbox],
 .frm_checkbox input[type=checkbox] {
 	border-radius: 4px;
 }
 
+.frm-white-body input[type="checkbox"]:checked,
 .frm_wrap input[type="checkbox"]:checked {
 	background-color: var(--primary-500);
 	border-color: var(--primary-500) !important;
 }
 
+.frm-white-body input[type="checkbox"]:checked:focus,
 .frm_wrap input[type="checkbox"]:checked:focus {
 	border-color: var(--primary-500);
 }
 
+.frm-white-body input[type="checkbox"]:checked::before,
 .frm_wrap input[type="checkbox"]:checked::before {
 	content: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox%3D%270%200%2010%2010%27%3E%3Cpath%20d%3D%27M9.2%202c.2.3.2.7%200%201l-5%205c-.3.2-.6.2-.9%200L.8 5.3a.6.6%200%200%201%20.9-.8l2%202%204.6-4.5c.3-.3.6-.3.9%200Z%27%20fill%3D%27%23fff%27%2F%3E%3C%2Fsvg%3E");
     height: 12px;
@@ -5598,6 +5609,10 @@ a.frm_add_logic_link.frm_hidden {
 	color: var(--grey);
 }
 
+.frm-fields label .frm_icon_font {
+	font-size: inherit;
+}
+
 .misc-pub-revisions.frm_icon_font,
 .misc-pub-revisions.frm_icon_font:hover {
 	color: inherit;
@@ -6798,8 +6813,9 @@ i.frm-show-inline-modal {
 .frm-search input[name="s"],
 .frm-search .dropdown-toggle,
 .frm-search input.frm-search-input {
-	border-radius: var(--border-radius);
+	border-radius: var(--small-radius);
 	padding-left: 33px !important;
+	border-color: var(--grey-300);
 }
 
 .frm-white-body .search-box input[name="s"], /* Views search */
@@ -8610,6 +8626,16 @@ Responsive Design
 
 	#frm-nav-tabs a {
 		margin-right: 0;
+	}
+}
+
+/* Firefox */
+@-moz-document url-prefix() {
+	.frm-white-body .tablenav select,
+	.frm-white-body .tablenav input[type="text"],
+	.wp-admin .frm_wrap .tablenav select,
+	.frm_wrap .tablenav input[type="text"] {
+		padding-top: 5px;
 	}
 }
 
